Bug 1052417 - Don't bailout of sizes selection if sizes wasn't provided r=jst